--- a/admin/src/main/resources/templates/index.html
+++ b/admin/src/main/resources/templates/index.html
@@ -13,7 +13,6 @@
     <meta http-equiv="refresh" content="0;ie.html" />
     <![endif]-->
 
-    <link rel="shortcut icon" href="favicon.ico"/>
     <link href="../static/css/bootstrap.min.css?v=3.3.6" rel="stylesheet"/>
     <link href="../static/css/font-awesome.min.css?v=4.4.0" rel="stylesheet"/>
     <link href="../static/css/animate.css" rel="stylesheet"/>
@@ -51,13 +50,13 @@
                         </a>
                     </li>
                     <li>
-                        <a class="J_menuItem" href="#">
+                        <a class="J_menuItem" href="/">
                             <i class="fa fa fa-line-chart text-green"></i>
                             <span class="nav-label">统计分析</span>
                         </a>
 					</li>
                     <li>
-                        <a class="J_menuItem" href="#">
+                        <a class="J_menuItem" href="/">
                             <i class="fa fa fa-bell-o text-yellow"></i>
                             <span class="nav-label">事件告警</span>
                             <span class="label label-warning pull-right"><small>163</small></span>
