--- a/admin/src/main/resources/templates/limiter-config.html
+++ b/admin/src/main/resources/templates/limiter-config.html
@@ -1,7 +1,5 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8" %>
-<%@ include file="library/master.jsp" %>
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,20 +9,20 @@
     <meta name="description" content="">
 
     <link rel="shortcut icon" href="favicon.ico">
-    <link href="${ctx}/res/css/bootstrap.min.css?v=3.3.6" rel="stylesheet">
-    <link href="${ctx}/res/css/font-awesome.css?v=4.4.0" rel="stylesheet">
+    <link href="../static/css/bootstrap.min.css?v=3.3.6" rel="stylesheet">
+    <link href="../static/css/font-awesome.css?v=4.4.0" rel="stylesheet">
 
     <!-- Data Tables -->
-    <link href="${ctx}/res/css/plugins/dataTables/dataTables.bootstrap.css" rel="stylesheet">
-    <link href="${ctx}/res/css/animate.css" rel="stylesheet">
-    <link href="${ctx}/res/css/style.css?v=4.1.0" rel="stylesheet">
-    <link href="${ctx}/res/css/plugins/switchery/switchery.css" rel="stylesheet">
+    <link href="../static/css/plugins/dataTables/dataTables.bootstrap.css" rel="stylesheet">
+    <link href="../static/css/animate.css" rel="stylesheet">
+    <link href="../static/css/style.css?v=4.1.0" rel="stylesheet">
+    <link href="../static/css/plugins/switchery/switchery.css" rel="stylesheet">
 
-    <link href="${ctx}/res/css/plugins/ionRangeSlider/ion.rangeSlider.css" rel="stylesheet">
-    <link href="${ctx}/res/css/plugins/ionRangeSlider/ion.rangeSlider.skinFlat.css" rel="stylesheet">
-    <link rel="stylesheet" href="${ctx}/res/ionRangeSliderDemo/css/normalize.css"/>
-    <link rel="stylesheet" href="${ctx}/res/ionRangeSliderDemo/css/ion.rangeSlider.css"/>
-    <link rel="stylesheet" href="${ctx}/res/ionRangeSliderDemo/css/ion.rangeSlider.skinFlat.css"/>
+    <link href="../static/css/plugins/ionRangeSlider/ion.rangeSlider.css" rel="stylesheet">
+    <link href="../static/css/plugins/ionRangeSlider/ion.rangeSlider.skinFlat.css" rel="stylesheet">
+    <link rel="stylesheet" href="../static/ionRangeSliderDemo/css/normalize.css"/>
+    <link rel="stylesheet" href="../static/ionRangeSliderDemo/css/ion.rangeSlider.css"/>
+    <link rel="stylesheet" href="../static/ionRangeSliderDemo/css/ion.rangeSlider.skinFlat.css"/>
 </head>
 
 <body class="gray-bg">
@@ -164,13 +162,13 @@
 </div>
 
 <!-- 全局js -->
-<script src="${ctx}/res/js/jquery.min.js?v=2.1.4"></script>
-<script src="${ctx}/res/js/bootstrap.min.js?v=3.3.6"></script>
+<script src="../static/js/jquery.min.js?v=2.1.4"></script>
+<script src="../static/js/bootstrap.min.js?v=3.3.6"></script>
 
 
 <!-- All JS -->
-<script src="${ctx}/res/ionRangeSliderDemo/js/jquery-1.12.3.min.js"></script>
-<script src="${ctx}/res/ionRangeSliderDemo/js/ion.rangeSlider.js"></script>
+<script src="../static/ionRangeSliderDemo/js/jquery-1.12.3.min.js"></script>
+<script src="../static/ionRangeSliderDemo/js/ion.rangeSlider.js"></script>
 
 <script>
     $(document).ready(function () {
