--- a/admin/src/main/resources/templates/limiter-configs.html
+++ b/admin/src/main/resources/templates/limiter-configs.html
@@ -1,25 +1,22 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8" %>
-<%@ include file="library/master.jsp" %>
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <title>限流统计 - 分布式限流</title>
-    <meta name="keywords" content="">
-    <meta name="description" content="">
+    <meta name="keywords" content=""/>
+    <meta name="description" content=""/>
 
-    <link rel="shortcut icon" href="favicon.ico">
-    <link href="${ctx}/res/css/bootstrap.min.css?v=3.3.6" rel="stylesheet">
-    <link href="${ctx}/res/css/font-awesome.css?v=4.4.0" rel="stylesheet">
+    <link href="../static/css/bootstrap.min.css?v=3.3.6" rel="stylesheet"/>
+    <link href="../static/css/font-awesome.css?v=4.4.0" rel="stylesheet"/>
 
     <!-- Data Tables -->
-    <link href="${ctx}/res/css/plugins/dataTables/dataTables.bootstrap.css" rel="stylesheet">
-    <link href="${ctx}/res/css/animate.css" rel="stylesheet">
-    <link href="${ctx}/res/css/style.css?v=4.1.0" rel="stylesheet">
-    <link href="${ctx}/res/css/plugins/switchery/switchery.css" rel="stylesheet">
-    <link href="${ctx}/res/css/plugins/bootstrap-table/bootstrap-table.min.css" rel="stylesheet">
+    <link href="../static/css/plugins/dataTables/dataTables.bootstrap.css" rel="stylesheet"/>
+    <link href="../static/css/animate.css" rel="stylesheet"/>
+    <link href="../static/css/style.css?v=4.1.0" rel="stylesheet"/>
+    <link href="../static/css/plugins/switchery/switchery.css" rel="stylesheet"/>
+    <link href="../static/css/plugins/bootstrap-table/bootstrap-table.min.css" rel="stylesheet"/>
 </head>
 
 <body class="gray-bg">
@@ -72,20 +69,20 @@
                                         <input type="text" name="enable"
                                                value="${globalConfig.enable}" style="display: none"/>
                                         <input type="checkbox" id="enable"
-                                               class="js-switch_1" ${globalConfig.enable=='ON'?'checked':''}/>
+                                               class="js-switch_1"/>
                                     </th>
                                     <th>
                                         <input type="text" name="broadcastEvent"
                                                value="${globalConfig.broadcastEvent}" style="display: none"/>
                                         <input type="checkbox" id="broadcastEvent"
-                                               class="js-switch_3" ${globalConfig.broadcastEvent=='ON'?'checked':''} />
+                                               class="js-switch_3"/>
                                     </th>
                                     <th>
                                         <input type="text" name="printExceedLog"
                                                value="${globalConfig.printExceedLog}"
                                                style="display: none"/>
                                         <input type="checkbox" id="printExceedLog"
-                                               class="js-switch_2" ${globalConfig.printExceedLog=='ON'?'checked':''} />
+                                               class="js-switch_2"/>
                                     </th>
                                     <th>
                                         <input type="text" placeholder="请输入参数……" name="pullConfigCycle"
@@ -156,7 +153,7 @@
                                     </c:choose>
                                 </td>
                                 <td class="center" style="color: #1AB394">
-                                        ${limiterConfig.config.rate}
+                                    ${limiterConfig.config.rate}
                                     req/${limiterConfig.config.granularity}${limiterConfig.config.unit}
                                 </td>
                                 <td class="center" style="color: #1AB394">${limiterConfig.config.rateTimeout}ms</td>
@@ -233,18 +230,18 @@
 </div>
 
 <!-- 全局js -->
-<script src="${ctx}/res/js/jquery.min.js?v=2.1.4"></script>
-<script src="${ctx}/res/js/bootstrap.min.js?v=3.3.6"></script>
+<script src="../static/js/jquery.min.js?v=2.1.4"></script>
+<script src="../static/js/bootstrap.min.js?v=3.3.6"></script>
 
-<script src="${ctx}/res/js/plugins/jeditable/jquery.jeditable.js"></script>
+<script src="../static/js/plugins/jeditable/jquery.jeditable.js"></script>
 
 <!-- Data Tables -->
-<script src="${ctx}/res/js/plugins/dataTables/jquery.dataTables.js"></script>
-<script src="${ctx}/res/js/plugins/dataTables/dataTables.bootstrap.js"></script>
+<script src="../static/js/plugins/dataTables/jquery.dataTables.js"></script>
+<script src="../static/js/plugins/dataTables/dataTables.bootstrap.js"></script>
 
-<script src="${ctx}/res/js/plugins/datapicker/bootstrap-datepicker.js"></script>
-<script src="${ctx}/res/js/plugins/switchery/switchery.js"></script>
-<script src="${ctx}/res/js/plugins/cropper/cropper.min.js"></script>
+<script src="../static/js/plugins/datapicker/bootstrap-datepicker.js"></script>
+<script src="../static/js/plugins/switchery/switchery.js"></script>
+<script src="../static/js/plugins/cropper/cropper.min.js"></script>
 <!-- Page-Level Scripts -->
 <script>
     $(document).ready(function () {
@@ -311,15 +308,15 @@
     }
 </script>
 <!-- Bootstrap table -->
-<script src="${ctx}/res/js/plugins/bootstrap-table/bootstrap-table.min.js"></script>
-<script src="${ctx}/res/js/plugins/bootstrap-table/bootstrap-table-mobile.min.js"></script>
-<script src="${ctx}/res/js/plugins/bootstrap-table/locale/bootstrap-table-zh-CN.min.js"></script>
+<script src="../static/js/plugins/bootstrap-table/bootstrap-table.min.js"></script>
+<script src="../static/js/plugins/bootstrap-table/bootstrap-table-mobile.min.js"></script>
+<script src="../static/js/plugins/bootstrap-table/locale/bootstrap-table-zh-CN.min.js"></script>
 <!-- Peity -->
 <script>
     (function (document, window, $) {
         (function () {
             $('#exampleTableEvents').bootstrapTable({
-                url: "${ctx}/res/js/demo/bootstrap_table_test.json",
+                url: "../static/js/demo/bootstrap_table_test.json",
                 search: true,
                 pagination: true,
                 showColumns: true,
@@ -376,4 +373,5 @@
     })(document, window, jQuery);
 </script>
 </body>
+</html>
 </html>
