--- a/admin/src/main/resources/templates/limiter-monitor.html
+++ b/admin/src/main/resources/templates/limiter-monitor.html
@@ -1,29 +1,26 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8" %>
-<%@ include file="library/master.jsp" %>
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <title>限流统计 - 分布式限流</title>
-    <meta name="keywords" content="">
-    <meta name="description" content="">
+    <meta name="keywords" content=""/>
+    <meta name="description" content=""/>
 
-    <link rel="shortcut icon" href="favicon.ico">
-    <link href="${ctx}/res/css/bootstrap.min.css?v=3.3.6" rel="stylesheet">
-    <link href="${ctx}/res/css/font-awesome.css?v=4.4.0" rel="stylesheet">
+    <link href="../static/css/bootstrap.min.css?v=3.3.6" rel="stylesheet"/>
+    <link href="../static/css/font-awesome.css?v=4.4.0" rel="stylesheet"/>
 
     <!-- Data Tables -->
-    <link href="${ctx}/res/css/plugins/dataTables/dataTables.bootstrap.css" rel="stylesheet">
-    <link href="${ctx}/res/css/animate.css" rel="stylesheet">
-    <link href="${ctx}/res/css/style.css?v=4.1.0" rel="stylesheet">
-    <link href="${ctx}/res/css/plugins/switchery/switchery.css" rel="stylesheet">
+    <link href="../static/css/plugins/dataTables/dataTables.bootstrap.css" rel="stylesheet"/>
+    <link href="../static/css/animate.css" rel="stylesheet"/>
+    <link href="../static/css/style.css?v=4.1.0" rel="stylesheet"/>
+    <link href="../static/css/plugins/switchery/switchery.css" rel="stylesheet"/>
 
-    <link rel="stylesheet" href="${ctx}/res/chart/css/animsition.min.css"/>
-    <link rel="stylesheet" href="${ctx}/res/chart/css/drop-down.css"/>
-    <link rel="stylesheet" href="${ctx}/res/chart/css/common.css"/>
-    <link rel="stylesheet" href="${ctx}/res/chart/css/system.css"/>
+    <link rel="stylesheet" href="../static/chart/css/animsition.min.css"/>
+    <link rel="stylesheet" href="../static/chart/css/drop-down.css"/>
+    <link rel="stylesheet" href="../static/chart/css/common.css"/>
+    <link rel="stylesheet" href="../static/chart/css/system.css"/>
 </head>
 
 <body class="gray-bg">
@@ -112,22 +109,22 @@
     </div>
 </div>
 <!-- 全局js -->
-<script src="${ctx}/res/js/jquery.min.js?v=2.1.4"></script>
-<script src="${ctx}/res/js/bootstrap.min.js?v=3.3.6"></script>
+<script src="../static/js/jquery.min.js?v=2.1.4"></script>
+<script src="../static/js/bootstrap.min.js?v=3.3.6"></script>
 <!-- 自定义js -->
-<script src="${ctx}/res/js/content.js?v=1.0.0"></script>
+<script src="../static/js/content.js?v=1.0.0"></script>
 
-<script src="${ctx}/res/chart/js/jquery.min.js"></script>
-<script src="${ctx}/res/chart/js/jquery-ui.min.js"></script>
-<script src="${ctx}/res/chart/js/select-widget-min.js"></script>
-<script src="${ctx}/res/chart/js/jquery.animsition.min.js"></script>
+<script src="../static/chart/js/jquery.min.js"></script>
+<script src="../static/chart/js/jquery-ui.min.js"></script>
+<script src="../static/chart/js/select-widget-min.js"></script>
+<script src="../static/chart/js/jquery.animsition.min.js"></script>
 <script src="https://cdn.bootcss.com/echarts/3.5.3/echarts.min.js"></script>
-<script src="${ctx}/res/chart/js/common.js"></script>
-<script src="${ctx}/res/echarts-theme/echarts-theme-walden.js"></script>
-<script src="${ctx}/res/echarts-theme/echarts-theme-westeros.js"></script>
-<script src="${ctx}/res/echarts-theme/echarts-theme-wonderland.js"></script>
-<script src="${ctx}/res/echarts-theme/echarts-theme-macarons.js"></script>
-<script src="${ctx}/res/echarts-theme/echarts-theme-essos.js"></script>
+<script src="../static/chart/js/common.js"></script>
+<script src="../static/echarts-theme/echarts-theme-walden.js"></script>
+<script src="../static/echarts-theme/echarts-theme-westeros.js"></script>
+<script src="../static/echarts-theme/echarts-theme-wonderland.js"></script>
+<script src="../static/echarts-theme/echarts-theme-macarons.js"></script>
+<script src="../static/echarts-theme/echarts-theme-essos.js"></script>
 
 <script>
     var width = $("#trade").width();
@@ -136,9 +133,9 @@
     $("#elapsed").css("width", width);
 </script>
 
-<script src="${ctx}/res/monitor/limiter/trade.js"></script>
-<script src="${ctx}/res/monitor/limiter/concurrency.js"></script>
-<script src="${ctx}/res/monitor/limiter/rate.js"></script>
-<script src="${ctx}/res/monitor/limiter/elapsed.js"></script>
+<script src="../static/monitor/limiter/trade.js"></script>
+<script src="../static/monitor/limiter/concurrency.js"></script>
+<script src="../static/monitor/limiter/rate.js"></script>
+<script src="../static/monitor/limiter/elapsed.js"></script>
 </body>
 </html>
