--- a/admin/src/main/resources/templates/index.html
+++ b/admin/src/main/resources/templates/index.html
@@ -67,21 +67,21 @@
                         <span class="ng-scope">微治理</span>
                     </li>
                     <li>
-                        <a class="J_menuItem" href="/degrade/degrade-configs">
+                        <a class="J_menuItem" href="degrade-configs.html">
                             <i class="fa fa-fire-extinguisher text-aqua"></i>
                             <span class="nav-label">服务降级 </span>
                             <span class="label label-primary pull-right"><small>hot</small></span>
                         </a>
                     </li>
                     <li>
-                        <a class="J_menuItem" href="/limiter/limiter-configs">
+                        <a class="J_menuItem" href="limiter-configs.html">
                         	<i class="fa fa-bitbucket text-red"></i>
                         	<span class="nav-label">分布式限流</span>
                             <span class="label label-danger pull-right"><small>hot</small></span>
                         </a>
                     </li>
                     <li>
-                        <a class="J_menuItem" href="/limiter/limiter-configs">
+                        <a class="J_menuItem" href="limiter-configs.html">
                             <i class="fa fa-chain-broken text-green"></i>
                             <span class="nav-label">熔断隔离</span>
                         </a>
