--- a/admin/src/main/resources/templates/limiter-configs.html
+++ b/admin/src/main/resources/templates/limiter-configs.html
@@ -241,70 +241,70 @@
 <script src="../static/js/plugins/switchery/switchery.js"></script>
 <script src="../static/js/plugins/cropper/cropper.min.js"></script>
 <!-- Page-Level Scripts -->
-<script>
-    $(document).ready(function () {
-            var colorArray = ['#ED5565', '#1AB394', '#1AB394']
-            for (var i = 1; i < 4; i++) {
-                new Switchery(document.querySelector('.js-switch_' + i), {color: colorArray[i - 1]});
-            }
+<!--<script>-->
+    <!--$(document).ready(function () {-->
+            <!--var colorArray = ['#ED5565', '#1AB394', '#1AB394']-->
+            <!--for (var i = 1; i < 4; i++) {-->
+                <!--new Switchery(document.querySelector('.js-switch_' + i), {color: colorArray[i - 1]});-->
+            <!--}-->
 
-            var nameArray = ['enable', 'printExceedLog', 'broadcastEvent', 'statisticReportEnable']
-            $('span[id=enable]').click(function () {
-                var obj = $('input[name=enable]');
-                if (obj.val() == 'ON') {
-                    obj.attr('value', 'OFF')
-                } else {
-                    obj.attr('value', 'ON')
-                }
-            });
-            $('span[id=broadcastEvent]').click(function () {
-                var obj = $('input[name=broadcastEvent]');
-                if (obj.val() == 'ON') {
-                    obj.attr('value', 'OFF')
-                } else {
-                    obj.attr('value', 'ON')
-                }
-            });
-            $('span[id=printExceedLog]').click(function () {
-                var obj = $('input[name=printExceedLog]');
-                if (obj.val() == 'ON') {
-                    obj.attr('value', 'OFF')
-                } else {
-                    obj.attr('value', 'ON')
-                }
-            });
+            <!--var nameArray = ['enable', 'printExceedLog', 'broadcastEvent', 'statisticReportEnable']-->
+            <!--$('span[id=enable]').click(function () {-->
+                <!--var obj = $('input[name=enable]');-->
+                <!--if (obj.val() == 'ON') {-->
+                    <!--obj.attr('value', 'OFF')-->
+                <!--} else {-->
+                    <!--obj.attr('value', 'ON')-->
+                <!--}-->
+            <!--});-->
+            <!--$('span[id=broadcastEvent]').click(function () {-->
+                <!--var obj = $('input[name=broadcastEvent]');-->
+                <!--if (obj.val() == 'ON') {-->
+                    <!--obj.attr('value', 'OFF')-->
+                <!--} else {-->
+                    <!--obj.attr('value', 'ON')-->
+                <!--}-->
+            <!--});-->
+            <!--$('span[id=printExceedLog]').click(function () {-->
+                <!--var obj = $('input[name=printExceedLog]');-->
+                <!--if (obj.val() == 'ON') {-->
+                    <!--obj.attr('value', 'OFF')-->
+                <!--} else {-->
+                    <!--obj.attr('value', 'ON')-->
+                <!--}-->
+            <!--});-->
 
 
-            $('.dataTables-example').dataTable();
-            /* Init DataTables */
-            var oTable = $('#editable').dataTable();
-            /* Apply the jEditable handlers to the table */
-            oTable.$('td').editable('../example_ajax1.php', {
-                "callback": function (sValue, y) {
-                    var aPos = oTable.fnGetPosition(this);
-                    oTable.fnUpdate(sValue, aPos[0], aPos[1]);
-                },
-                "submitdata": function (value, settings) {
-                    return {
-                        "row_id": this.parentNode.getAttribute('id'),
-                        "column": oTable.fnGetPosition(this)[2]
-                    };
-                },
-                "width": "90%",
-                "height": "100%"
-            });
-        }
-    );
+            <!--$('.dataTables-example').dataTable();-->
+            <!--/* Init DataTables */-->
+            <!--var oTable = $('#editable').dataTable();-->
+            <!--/* Apply the jEditable handlers to the table */-->
+            <!--oTable.$('td').editable('../example_ajax1.php', {-->
+                <!--"callback": function (sValue, y) {-->
+                    <!--var aPos = oTable.fnGetPosition(this);-->
+                    <!--oTable.fnUpdate(sValue, aPos[0], aPos[1]);-->
+                <!--},-->
+                <!--"submitdata": function (value, settings) {-->
+                    <!--return {-->
+                        <!--"row_id": this.parentNode.getAttribute('id'),-->
+                        <!--"column": oTable.fnGetPosition(this)[2]-->
+                    <!--};-->
+                <!--},-->
+                <!--"width": "90%",-->
+                <!--"height": "100%"-->
+            <!--});-->
+        <!--}-->
+    <!--);-->
 
-    function fnClickAddRow() {
-        $('#editable').dataTable().fnAddData([
-            "Custom row",
-            "New row",
-            "New row",
-            "New row",
-            "New row"]);
-    }
-</script>
+    <!--function fnClickAddRow() {-->
+        <!--$('#editable').dataTable().fnAddData([-->
+            <!--"Custom row",-->
+            <!--"New row",-->
+            <!--"New row",-->
+            <!--"New row",-->
+            <!--"New row"]);-->
+    <!--}-->
+<!--</script>-->
 <!-- Bootstrap table -->
 <script src="../static/js/plugins/bootstrap-table/bootstrap-table.min.js"></script>
 <script src="../static/js/plugins/bootstrap-table/bootstrap-table-mobile.min.js"></script>
@@ -371,5 +371,4 @@
     })(document, window, jQuery);
 </script>
 </body>
-</html>
 </html>
