--- a/admin/src/main/resources/templates/index.html
+++ b/admin/src/main/resources/templates/index.html
@@ -44,19 +44,19 @@
                         <span class="ng-scope">监控统计</span>
                     </li>
                     <li>
-                        <a class="J_menuItem" href="main.html">
+                        <a class="J_menuItem" href="main">
                             <i class="fa fa-home"></i>
                             <span class="nav-label">主页</span>
                         </a>
                     </li>
                     <li>
-                        <a class="J_menuItem" href="/">
+                        <a class="J_menuItem" href="main">
                             <i class="fa fa fa-line-chart text-green"></i>
                             <span class="nav-label">统计分析</span>
                         </a>
 					</li>
                     <li>
-                        <a class="J_menuItem" href="/">
+                        <a class="J_menuItem" href="main">
                             <i class="fa fa fa-bell-o text-yellow"></i>
                             <span class="nav-label">事件告警</span>
                             <span class="label label-warning pull-right"><small>163</small></span>
@@ -67,21 +67,21 @@
                         <span class="ng-scope">微治理</span>
                     </li>
                     <li>
-                        <a class="J_menuItem" href="degrade-configs.html">
+                        <a class="J_menuItem" href="degrade-configs">
                             <i class="fa fa-fire-extinguisher text-aqua"></i>
                             <span class="nav-label">服务降级 </span>
                             <span class="label label-primary pull-right"><small>hot</small></span>
                         </a>
                     </li>
                     <li>
-                        <a class="J_menuItem" href="limiter-configs.html">
+                        <a class="J_menuItem" href="limiter-configs">
                         	<i class="fa fa-bitbucket text-red"></i>
                         	<span class="nav-label">分布式限流</span>
                             <span class="label label-danger pull-right"><small>hot</small></span>
                         </a>
                     </li>
                     <li>
-                        <a class="J_menuItem" href="limiter-configs.html">
+                        <a class="J_menuItem" href="limiter-configs">
                             <i class="fa fa-chain-broken text-green"></i>
                             <span class="nav-label">熔断隔离</span>
                         </a>
