--- a/admin/src/main/resources/templates/degrade-configs.html
+++ b/admin/src/main/resources/templates/degrade-configs.html
@@ -1,25 +1,22 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8" pageEncoding="UTF-8" %>
-<%@ include file="library/master.jsp" %>
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <title>服务降级</title>
-    <meta name="keywords" content="">
-    <meta name="description" content="">
+    <meta name="keywords" content=""/>
+    <meta name="description" content=""/>
 
-    <link rel="shortcut icon" href="favicon.ico">
-    <link href="${ctx}/res/css/bootstrap.min.css?v=3.3.6" rel="stylesheet">
-    <link href="${ctx}/res/css/font-awesome.css?v=4.4.0" rel="stylesheet">
+    <link href="../static/css/bootstrap.min.css?v=3.3.6" rel="stylesheet"/>
+    <link href="../static/css/font-awesome.css?v=4.4.0" rel="stylesheet"/>
 
     <!-- Data Tables -->
-    <link href="${ctx}/res/css/plugins/dataTables/dataTables.bootstrap.css" rel="stylesheet">
-    <link href="${ctx}/res/css/animate.css" rel="stylesheet">
-    <link href="${ctx}/res/css/style.css?v=4.1.0" rel="stylesheet">
-    <link href="${ctx}/res/css/plugins/switchery/switchery.css" rel="stylesheet">
-    <link href="${ctx}/res/css/plugins/bootstrap-table/bootstrap-table.min.css" rel="stylesheet">
+    <link href="../static/css/plugins/dataTables/dataTables.bootstrap.css" rel="stylesheet"/>
+    <link href="../static/css/animate.css" rel="stylesheet"/>
+    <link href="../static/css/style.css?v=4.1.0" rel="stylesheet"/>
+    <link href="../static/css/plugins/switchery/switchery.css" rel="stylesheet"/>
+    <link href="../static/css/plugins/bootstrap-table/bootstrap-table.min.css" rel="stylesheet"/>
 </head>
 
 <body class="gray-bg">
@@ -68,22 +65,22 @@
                                         <input type="text" name="enable"
                                                value="${globalConfig.enable}" style="display: none"/>
                                         <input type="checkbox" id="enable"
-                                               class="js-switch_1" ${globalConfig.enable=='ON'?'checked':''}/>
+                                               class="js-switch_1"/>
                                     </th>
                                     <th>
                                         <input type="text" name="broadcastEvent"
                                                value="${globalConfig.broadcastEvent}" style="display: none"/>
                                         <input type="checkbox" id="broadcastEvent"
-                                               class="js-switch_2" ${globalConfig.broadcastEvent=='ON'?'checked':''} />
+                                               class="js-switch_2" />
                                     </th>
                                     <th>
                                         <select class="form-control" name="level" value="${globalConfig.level}">
-                                            <option value="NON" ${globalConfig.level=='NON'?'selected':''}>关闭</option>
-                                            <option value="HINT" ${globalConfig.level=='HINT'?'selected':''}>提示</option>
-                                            <option value="RECOMMEND" ${globalConfig.level=='RECOMMEND'?'selected':''}>推荐</option>
-                                            <option value="NEED" ${globalConfig.level=='NEED'?'selected':''}>需要</option>
-                                            <option value="WARN" ${globalConfig.level=='WARN'?'selected':''}>警告</option>
-                                            <option value="SERIOUS" ${globalConfig.level=='SERIOUS'?'selected':''}>必须</option>
+                                            <option value="NON">关闭</option>
+                                            <option value="HINT">提示</option>
+                                            <option value="RECOMMEND">推荐</option>
+                                            <option value="NEED">需要</option>
+                                            <option value="WARN">警告</option>
+                                            <option value="SERIOUS">必须</option>
                                         </select>
                                     </th>
                                     <th>
@@ -217,82 +214,80 @@
         </div>
     </div>
 </div>
-</div>
-</div>
 
 <!-- 全局js -->
-<script src="${ctx}/res/js/jquery.min.js?v=2.1.4"></script>
-<script src="${ctx}/res/js/bootstrap.min.js?v=3.3.6"></script>
+<script src="../static/js/jquery.min.js?v=2.1.4"></script>
+<script src="../static/js/bootstrap.min.js?v=3.3.6"></script>
 
-<script src="${ctx}/res/js/plugins/jeditable/jquery.jeditable.js"></script>
+<script src="../static/js/plugins/jeditable/jquery.jeditable.js"></script>
 
 <!-- Data Tables -->
-<script src="${ctx}/res/js/plugins/dataTables/jquery.dataTables.js"></script>
-<script src="${ctx}/res/js/plugins/dataTables/dataTables.bootstrap.js"></script>
+<script src="../static/js/plugins/dataTables/jquery.dataTables.js"></script>
+<script src="../static/js/plugins/dataTables/dataTables.bootstrap.js"></script>
 
-<script src="${ctx}/res/js/plugins/datapicker/bootstrap-datepicker.js"></script>
-<script src="${ctx}/res/js/plugins/switchery/switchery.js"></script>
-<script src="${ctx}/res/js/plugins/cropper/cropper.min.js"></script>
+<script src="../static/js/plugins/datapicker/bootstrap-datepicker.js"></script>
+<script src="../static/js/plugins/switchery/switchery.js"></script>
+<script src="../static/js/plugins/cropper/cropper.min.js"></script>
 <!-- Page-Level Scripts -->
-<script>
-    $(document).ready(function () {
-            var colorArray = ['#ED5565', '#1AB394']
-            for (var i = 1; i <3; i++) {
-                new Switchery(document.querySelector('.js-switch_' + i), {color: colorArray[i - 1]});
-            }
+<!--<script>-->
+    <!--$(document).ready(function () {-->
+            <!--var colorArray = ['#ED5565', '#1AB394']-->
+            <!--for (var i = 1; i <3; i++) {-->
+                <!--new Switchery(document.querySelector('.js-switch_' + i), {color: colorArray[i - 1]});-->
+            <!--}-->
 
-            var nameArray = ['enable', 'printExceedLog', 'broadcastEvent', 'statisticReportEnable']
-            $('span[id=enable]').click(function () {
-                var obj = $('input[name=enable]');
-                if (obj.val() == 'ON') {
-                    obj.attr('value', 'OFF')
-                } else {
-                    obj.attr('value', 'ON')
-                }
-            });
-            $('span[id=broadcastEvent]').click(function () {
-                var obj = $('input[name=broadcastEvent]');
-                if (obj.val() == 'ON') {
-                    obj.attr('value', 'OFF')
-                } else {
-                    obj.attr('value', 'ON')
-                }
-            });
+            <!--var nameArray = ['enable', 'printExceedLog', 'broadcastEvent', 'statisticReportEnable']-->
+            <!--$('span[id=enable]').click(function () {-->
+                <!--var obj = $('input[name=enable]');-->
+                <!--if (obj.val() == 'ON') {-->
+                    <!--obj.attr('value', 'OFF')-->
+                <!--} else {-->
+                    <!--obj.attr('value', 'ON')-->
+                <!--}-->
+            <!--});-->
+            <!--$('span[id=broadcastEvent]').click(function () {-->
+                <!--var obj = $('input[name=broadcastEvent]');-->
+                <!--if (obj.val() == 'ON') {-->
+                    <!--obj.attr('value', 'OFF')-->
+                <!--} else {-->
+                    <!--obj.attr('value', 'ON')-->
+                <!--}-->
+            <!--});-->
 
 
-            $('.dataTables-example').dataTable();
-            /* Init DataTables */
-            var oTable = $('#editable').dataTable();
-            /* Apply the jEditable handlers to the table */
-            oTable.$('td').editable('../example_ajax1.php', {
-                "callback": function (sValue, y) {
-                    var aPos = oTable.fnGetPosition(this);
-                    oTable.fnUpdate(sValue, aPos[0], aPos[1]);
-                },
-                "submitdata": function (value, settings) {
-                    return {
-                        "row_id": this.parentNode.getAttribute('id'),
-                        "column": oTable.fnGetPosition(this)[2]
-                    };
-                },
-                "width": "90%",
-                "height": "100%"
-            });
-        }
-    );
+            <!--$('.dataTables-example').dataTable();-->
+            <!--/* Init DataTables */-->
+            <!--var oTable = $('#editable').dataTable();-->
+            <!--/* Apply the jEditable handlers to the table */-->
+            <!--oTable.$('td').editable('../example_ajax1.php', {-->
+                <!--"callback": function (sValue, y) {-->
+                    <!--var aPos = oTable.fnGetPosition(this);-->
+                    <!--oTable.fnUpdate(sValue, aPos[0], aPos[1]);-->
+                <!--},-->
+                <!--"submitdata": function (value, settings) {-->
+                    <!--return {-->
+                        <!--"row_id": this.parentNode.getAttribute('id'),-->
+                        <!--"column": oTable.fnGetPosition(this)[2]-->
+                    <!--};-->
+                <!--},-->
+                <!--"width": "90%",-->
+                <!--"height": "100%"-->
+            <!--});-->
+        <!--}-->
+    <!--);-->
 
-    function fnClickAddRow() {
-        $('#editable').dataTable().fnAddData([
-            "Custom row",
-            "New row",
-            "New row",
-            "New row",
-            "New row"]);
-    }
-</script>
+    <!--function fnClickAddRow() {-->
+        <!--$('#editable').dataTable().fnAddData([-->
+            <!--"Custom row",-->
+            <!--"New row",-->
+            <!--"New row",-->
+            <!--"New row",-->
+            <!--"New row"]);-->
+    <!--}-->
+<!--</script>-->
 <!-- Bootstrap table -->
-<script src="${ctx}/res/js/plugins/bootstrap-table/bootstrap-table.min.js"></script>
-<script src="${ctx}/res/js/plugins/bootstrap-table/bootstrap-table-mobile.min.js"></script>
-<script src="${ctx}/res/js/plugins/bootstrap-table/locale/bootstrap-table-zh-CN.min.js"></script>
+<script src="../static/js/plugins/bootstrap-table/bootstrap-table.min.js"></script>
+<script src="../static/js/plugins/bootstrap-table/bootstrap-table-mobile.min.js"></script>
+<script src="../static/js/plugins/bootstrap-table/locale/bootstrap-table-zh-CN.min.js"></script>
 </body>
 </html>
